src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ConsumerID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ConsumerID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer__c</fullName>
        <label>Consumer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PrimaryMember</fullName>
                </value>
                <value>
                    <fullName>Dependent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Lens_Consultant_Last_Contacted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>When an Optics Contact Lens Consultant completes an activity, today’s date is populated</inlineHelpText>
        <label>Contact Lens Consultant Last Contacted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractState__c</fullName>
        <label>Contract State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>For Practice and Business accounts so that the data can be populated for use in premier tier calculation.
Population on Business account will be manual or through data loader.</description>
        <inlineHelpText>Identifies the location&apos;s relationship with VSP for Premier Tiering</inlineHelpText>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
                <value>
                    <fullName>AOP</fullName>
                </value>
                <value>
                    <fullName>CAT2</fullName>
                </value>
                <value>
                    <fullName>Conflict</fullName>
                </value>
                <value>
                    <fullName>GAP</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>LVC</fullName>
                </value>
                <value>
                    <fullName>Near Site</fullName>
                </value>
                <value>
                    <fullName>Net Dev Excluded</fullName>
                </value>
                <value>
                    <fullName>Net Dev Purchasing Requirement</fullName>
                </value>
                <value>
                    <fullName>Not Supported</fullName>
                </value>
                <value>
                    <fullName>Onsite</fullName>
                </value>
                <value>
                    <fullName>Pearle Vision CO</fullName>
                </value>
                <value>
                    <fullName>Pearle Vision LO</fullName>
                </value>
                <value>
                    <fullName>Pop Up</fullName>
                </value>
                <value>
                    <fullName>Rollup</fullName>
                </value>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>VSP Retail</fullName>
                </value>
                <value>
                    <fullName>VSP Ventures</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count_of_GRG_Relationships__c</fullName>
        <label>Count of GRG Relationships</label>
        <summaryForeignKey>Global_Rewards_Group_Relationship__c.Child_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <description>The unique identifier that Dun &amp; Bradstreet has assigned this company. </description>
        <label>DUNS#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DialSource__DS_Owner_ID__c</fullName>
        <description>The record owner&apos;s Salesforce ID. Used in Campaign source reports to distribute the records using the Record Owner Distribution feature</description>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DS Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Datetime_of_Last_Disposition_DS__c</fullName>
        <description>Time stamp of when the last Disposition was clicked</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Datetime of Last Disposition</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Last_Call_Campaign_Name__c</fullName>
        <description>Name of the Call Campaign the record was last called from</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Call Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Last_Disposition_DS__c</fullName>
        <description>Name of the last Disposition clicked</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Disposition</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Next_Call_DS__c</fullName>
        <description>Datetime field used to set the next call datetime for reference in automation or Reports/List Views</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Total_Call_Count_DS__c</fullName>
        <description>Total number of calls made on this record</description>
        <label>Total Call Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dispense_Materials__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Dispense Materials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diverse_Business_Owner__c</fullName>
        <label>Diverse Business Owner</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disabled Veteran</fullName>
                </value>
                <value>
                    <fullName>Minority</fullName>
                </value>
                <value>
                    <fullName>Women</fullName>
                </value>
                <value>
                    <fullName>LGBT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doctor_Hours__c</fullName>
        <inlineHelpText>Total number of hours worked per week by VSP Member Doctors at this account.</inlineHelpText>
        <label>Doctor Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EHM_5_or_Greater__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field will be set by workflow field update if Account has an EHM Rate of 5% or above.  Field will be used in Premier Dashboard.</description>
        <label>EHM 5% or Greater</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edger__c</fullName>
        <label>Edger</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date_Issue__c</fullName>
        <formula>IF(Vision_Care_End_Date__c &lt;  Vision_Care_Effective_Date__c || AND(NOT(ISBLANK(Vision_Care_End_Date__c)), ISBLANK(Vision_Care_Effective_Date__c))
, TRUE, FALSE)</formula>
        <label>Effective Date Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Exam_Room_Handicap_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exam Room Handicap Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclusive_VSP_Patient_Offers__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check when none of the qualifying business accounts have NODIS - Opts out of discounts for Participation Exclusion</description>
        <label>Exclusive VSP Patient Offers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Explanation_Of_Payment_Distribution__c</fullName>
        <label>Explanation Of Payment Distribution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S - VSP Online</fullName>
                    <default>true</default>
                    <label>S - VSP Online</label>
                </value>
                <value>
                    <fullName>E - Electronic</fullName>
                </value>
                <value>
                    <fullName>B - Mail and Electronic</fullName>
                </value>
                <value>
                    <fullName>M - Mail</fullName>
                </value>
                <value>
                    <fullName>F - 835 Electronic</fullName>
                </value>
                <value>
                    <fullName>G - 835 Mail and Electronic</fullName>
                </value>
                <value>
                    <fullName>H - 835 Electronic Relay Health</fullName>
                </value>
                <value>
                    <fullName>I - 835 Mail and Electronic Relay Health</fullName>
                </value>
                <value>
                    <fullName>J - 835 Electronic Luxottica</fullName>
                </value>
                <value>
                    <fullName>K - 835 Electronic and Mail Luxottica</fullName>
                </value>
                <value>
                    <fullName>T - 835 Electronic TK Systems</fullName>
                </value>
                <value>
                    <fullName>U - 835 Electronic and Mail TK Systems</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Building_Handicap_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Building Handicap Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eyefinity_Access__c</fullName>
        <label>Eyefinity Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B - Basic</fullName>
                </value>
                <value>
                    <fullName>J - Participates in E-Claim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eyefinity_AcuityLogic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does customer have AcuityLogic License?</description>
        <inlineHelpText>This indicates that this is a practice management license holder, which may cover additional licenses holders.</inlineHelpText>
        <label>AcuityLogic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eyefinity_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Current Eyefinity Customer.</description>
        <inlineHelpText>Current Eyefinity Customer.</inlineHelpText>
        <label>Eyefinity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eyefinity_EHR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does Account have current license for new EHR?</description>
        <inlineHelpText>Does Account have current license for new EHR?</inlineHelpText>
        <label>Eyefinity EHR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eyefinity_ExamWRITER__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does Account have current license.</description>
        <inlineHelpText>Does Account have current license.</inlineHelpText>
        <label>ExamWRITER</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eyefinity_Gov_Commercial_Claims__c</fullName>
        <description>Gov or Commercial Claims Last 12 months</description>
        <inlineHelpText>Gov or Commercial Claims Last 12 months</inlineHelpText>
        <label>Gov &amp; Commercial Claims LTM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eyefinity_Inside_Sales__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Eyefinity Inside Sales</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eyefinity_Non_VSP_Lab_Orders__c</fullName>
        <description>Lab orders NOT tied to a VSP claim.  These orders went to any lab.  The count here is NOT showing whether orders went to VSPOne labs.</description>
        <inlineHelpText>Lab orders NOT tied to a VSP claim.  These orders went to any lab.  The count here is NOT showing whether orders went to VSPOne labs.</inlineHelpText>
        <label>Non-VSP Lab Orders LTM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eyefinity_OfficeMate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does customer have OfficeMate?</description>
        <inlineHelpText>This indicates that this is a practice management license holder, which may cover additional licenses holders.</inlineHelpText>
        <label>OfficeMate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eyefinity_Outside_Sales__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Eyefinity Outside Sales</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eyefinity_PM_Interface__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer is currently using PMI through this PM system.  Customers using a non-Eyefinity PM system show as Competitor.</description>
        <inlineHelpText>Customer is currently using PMI through this PM system.  Customers using a non-Eyefinity PM system show as Competitor.</inlineHelpText>
        <label>PM Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eyefinity_PM__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Eyefinity Cloud-Based Practice Management Solution</inlineHelpText>
        <label>Eyefinity PM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eyefinity_com_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer has logged on to Eyefinity.com in the last 6 months.  All Eyefinity customers have access to view their bills.  Access to areas of the site, like VSP claim processing, are determined by their user profile.</description>
        <inlineHelpText>Customer has logged on to Eyefinity.com in the last 6 months.  All Eyefinity customers have access to view their bills.  Access to areas of the site, like VSP claim processing, are determined by their user profile.</inlineHelpText>
        <label>Eyefinity.com Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eyefinity_eBuy_Units__c</fullName>
        <description>eBuy Units Last 12 months</description>
        <inlineHelpText>eBuy Units Last 12 months</inlineHelpText>
        <label>eBuy Units LTM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eyefinity_eWeb_Extra__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does Account have eWeb Extra subscription.</description>
        <inlineHelpText>Does Account have eWeb Extra subscription.</inlineHelpText>
        <label>eWeb Extra</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eyewear_Last_Month_Revenue__c</fullName>
        <label>Eyewear Last Month Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eyewear_Location_Spend_LTM__c</fullName>
        <inlineHelpText>Location&apos;s spend on Eyewear in the last 12 months</inlineHelpText>
        <label>Eyewear Location Spend LTM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eyewear_Sales_Needed_Display__c</fullName>
        <description>Displays the amount of Eyewear Sales needed for Premier before the next check in period.</description>
        <formula>IF (Marchon_Sales_Target__c != 0 &amp;&amp;(Eyewear_Sales_Needed__c &gt; 0), (&quot;$&quot; &amp; TEXT(Eyewear_Sales_Needed__c )+ &quot; in next &quot; +  TEXT(Months_to_Check_In__c)  + &quot; months&quot;), &quot;$0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eyewear Sales Needed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eyewear_Sales_Needed__c</fullName>
        <label>Eyewear Sales Needed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eyewear_Sales_Rolling_Off__c</fullName>
        <label>Eyewear Sales Rolling Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Featured_Frame_Brands__c</fullName>
        <description>Custom field to be populated through data integration.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Featured Frame Brands</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Calculation_Code__c</fullName>
        <label>Fee Calculation Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>O - Old Calculated Fee Schedule</fullName>
                </value>
                <value>
                    <fullName>N - New Calculated Fee Schedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frame_Group__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Refers to the tier based on frame purchases made at the Practice Account level.</inlineHelpText>
        <label>Frame Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Fitting_and_Adjustments__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Free Fitting and Adjustments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Friday_Business_Hours__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Friday Business Hours</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friday_Close__c</fullName>
        <label>Friday Close</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:30 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:30 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:30 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:30 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Friday_Open__c</fullName>
        <label>Friday Open</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:30 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:30 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:30 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:30 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GBDM_Last_Activity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Date of the last Task or Event a Global Business Development Manager Completed on the account</inlineHelpText>
        <label>GBDM Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GBD_Relationship_Manager__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GBD Relationship Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBD_Relationship_Partner__c</fullName>
        <description>GBD Relationship Partner</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GBD Relationship Partner</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Account_Segmentation__c</fullName>
        <description>Global segmentation scores</description>
        <inlineHelpText>Growth Opportunity for Account.  A=Highest, F=Lowest</inlineHelpText>
        <label>Global Account Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A010</fullName>
                </value>
                <value>
                    <fullName>A011</fullName>
                </value>
                <value>
                    <fullName>A012</fullName>
                </value>
                <value>
                    <fullName>A013</fullName>
                </value>
                <value>
                    <fullName>A014</fullName>
                </value>
                <value>
                    <fullName>A020</fullName>
                </value>
                <value>
                    <fullName>A021</fullName>
                </value>
                <value>
                    <fullName>B010</fullName>
                </value>
                <value>
                    <fullName>B011</fullName>
                </value>
                <value>
                    <fullName>B012</fullName>
                </value>
                <value>
                    <fullName>B013</fullName>
                </value>
                <value>
                    <fullName>B014</fullName>
                </value>
                <value>
                    <fullName>B015</fullName>
                </value>
                <value>
                    <fullName>B020</fullName>
                </value>
                <value>
                    <fullName>B021</fullName>
                </value>
                <value>
                    <fullName>B022</fullName>
                </value>
                <value>
                    <fullName>B023</fullName>
                </value>
                <value>
                    <fullName>B024</fullName>
                </value>
                <value>
                    <fullName>B025</fullName>
                </value>
                <value>
                    <fullName>B026</fullName>
                </value>
                <value>
                    <fullName>B027</fullName>
                </value>
                <value>
                    <fullName>B028</fullName>
                </value>
                <value>
                    <fullName>C010</fullName>
                </value>
                <value>
                    <fullName>C011</fullName>
                </value>
                <value>
                    <fullName>C012</fullName>
                </value>
                <value>
                    <fullName>C013</fullName>
                </value>
                <value>
                    <fullName>C014</fullName>
                </value>
                <value>
                    <fullName>C015</fullName>
                </value>
                <value>
                    <fullName>C016</fullName>
                </value>
                <value>
                    <fullName>C017</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Business_Development_Manager__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Global Business Development Manager</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Business_Development_Partner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Global Business Development Boundary</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Rewards_Total_Eyewear_Sales__c</fullName>
        <label>Global Rewards Total Eyewear Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Global_Rewards_Total_UNITY_Sales__c</fullName>
        <label>Global Rewards Total UNITY Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Contact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account has a High Profile Vision Care Doctor.</description>
        <label>High Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IOF_Uncut_Pilot_Program__c</fullName>
        <inlineHelpText>When Yes or Exception, this office can process uncut lenses in their in-office lab</inlineHelpText>
        <label>IOF Uncut Pilot Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IRS_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IRS Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRS_Tax_ID__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>IRS Tax ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifying_Address_Validation_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Identifying Address Validation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifying_Address_Validation_Timestamp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Identifying Address Validation Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Individual_Plan_Doctor_Referral_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Individual Plan Doctor Referral Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Building_Handicap_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Building Handicap Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsBAException__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsBAException</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>